--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,53 @@
 {
   "Welcome back": "Welcome back",
+  "View all" : "View all",
+  "Create new View" : "Create new View",
+  "Search Views..." : "Search Views...",
+  "Preview View": "Preview View",
+  "Edit View" : "Edit View",
+  "Name" : "Name",
+  "Data Analyst view" : "Data Analyst view",
+  "This View is useful for Data Analysts" : "This View is useful for Data Analysts",
+  "Give your new View a name." : "Give your new View a name.",
+  "Description": "Description",
+  "Write a description for your View." : "Write a description for your View.",
+  "Type" : "Type",
+  "Select the type of your new View." : "Select the type of your new View.",
+  "Filters" : "Filters",
+  "Select the filters that are applied when this View is selected. Assets that match these filters will be shown when the View is applied." : "Select the filters that are applied when this View is selected. Assets that match these filters will be shown when the View is applied.",
+  "Add Filter" : "Add Filter",
+  "No data product set" : "No data product set",
+  "Lineage" : "Lineage",
+  "Details" : "Details",
+  "Group related entities based on shared characteristics by adding them to a Data Product." : "Group related entities based on shared characteristics by adding them to a Data Product.",
+  "Owner": "Owner",
+  "Tag": "Tag",
+  "Platform": "Platform",
+  "Column Tag": "Column Tag",
+  "Glossary Term": "Glossary Term",
+  "Column Glossary Term": "Column Glossary Term",
+  "Column Name": "Column Name",
+  "Column Description": "Column Description",
+  "Soft Deleted": "Soft Deleted",
+  "Entity Type": "Entity Type",
+  "Container": "Container",
+  "Sub Type": "Sub Type",
+  "Environment": "Environment",
+  "Degree": "Degree",
+  "Browse": "Browse",
+  "Add Link": "Add Link",
+  "Add Documentation" : "Add Documentation",
+  "Entities" : "Entities",
+  "Data Products" : "Data Products",
+  "Manage Views" : "Manage Views",
   "Analytics": "Analytics",
   "View DataHub usage analytics": "View DataHub usage analytics",
   "Ingestion": "Ingestion",
   "Connect DataHub to your organization's data sources": "Connect DataHub to your organization's data sources",
   "Govern": "Govern",
   "Glossary": "Glossary",
+  "Empty Glossary" : "Empty Glossary",
+  "Create Terms and Term Groups to organize data assets using a shared vocabulary." : "Create Terms and Term Groups to organize data assets using a shared vocabulary.",
   "View and modify your data dictionary": "View and modify your data dictionary",
   "Domains": "Domains",
   "Domain": "Domain",
@@ -16,22 +58,73 @@
   "Try searching for" : "Try searching for",
   "Platforms" : "Platforms",
   "Top Tags" : "Top Tags",
+  "Tags" : "Tags",
+  "Glossary Terms": "Glossary Terms",
+  "Data Product" : "Data Product",
   "Explore your data": "Explore your data",
   "View All Domains" : "View All Domains",
   "Business Glossary" : "Business Glossary",
   "Add Term Group" : "Add Term Group",
   "Add Term" : "Add Term",
+  "Add Terms" : "Add Terms",
   "Add Glossary Term to assets" : "Add Glossary Term to assets",
   "Add to assets" : "Add to assets",
   "Add Owners" : "Add Owners",
   "Owners" : "Owners",
   "No domain set" : "No domain set",
+  "Group related entities based on your organizational structure using by adding them to a Domain." : "Group related entities based on your organizational structure using by adding them to a Domain.",
   "About" : "About",
   "No documentation yet" : "No documentation yet",
   "Share your knowledge by adding documentation and links to helpful resources.": "Share your knowledge by adding documentation and links to helpful resources.",
-  "Group related entities based on your organizational structure using by adding them to a Domain." : "Group related entities based on your organizational structure using by adding them to a Domain.",
+  "No owners" : "No owners",
+  "Adding owners helps you keep track of who is responsible for this data." : "Adding owners helps you keep track of who is responsible for this data.",
+
+  "No tags added yet" : "No tags added yet",
+  "Tag entities to help make them more discoverable and call out their most important attributes.": "Tag entities to help make them more discoverable and call out their most important attributes.",
+  "No terms added yet" : "No terms added yet",
+  "Apply glossary terms to entities to classify their data." : "Apply glossary terms to entities to classify their data.",
+  "No queries yet" : "No queries yet",
   "Mark as deprecated" : "Mark as deprecated",
   "Mark as un-deprecated": "Mark as un-deprecated",
   "Confirm Mark as un-deprecated" : "Confirm Mark as un-deprecated",
-  "Are you sure you want to mark these assets as un-deprecated?" : "Are you sure you want to mark these assets as un-deprecated?"
+  "Are you sure you want to mark these assets as un-deprecated?" : "Are you sure you want to mark these assets as un-deprecated?",
+  "Most Popular": "Most Popular",
+  "Downstream" : "Downstream",
+  "upstream" : "UpStream",
+  "Filter lineage edges by observed date" : "Filter lineage edges by observed date",
+  "Column Lineage" : "Column Lineage",
+  "Hide column level lineage" : "Hide column level lineage",
+  "Show column level lineage" : "Show column level lineage",
+  "Click to refresh data" : "Click to refresh data",
+  "Refresh" : "Refresh",
+  "Visualize Lineage" : "Visualize Lineage",
+  "Edit": "Edit",
+  "Edit Downstream": "Edit Downstream",
+  "Edit Upstream" : "Edit Upstream",
+  "Documentation" : "Documentation",
+  "Schema" : "Schema",
+  "View Definition" : "View Definition ",
+  "Preview" : "Preview",
+  "Lineage" : "Lineage ",
+  "Properties" : "Properties",
+  "Queries" : "Queries ",
+  "Stats" : "Stats",
+  "Validation" : "Validation",
+  "Operations" : "Operations",
+  "Access Management" : "Access Management",
+
+  "Related Entities": "Related Entities",
+  "Related Terms": "Related Terms",
+  "Inherits": "Inherits",
+  "Contains" : "Contains",
+  "Contained by" : "Contained by",
+  "Inherited by" : "Inherited by",
+  "Contains no Terms" : "Contains no Terms",
+  "Terms can contain other terms to represent a \"Has A\" style relationship." : "Terms can contain other terms to represent a \"Has A\" style relationship.",
+  "Does not inherit from any terms" : "Does not inherit from any terms",
+  "Is not contained by any terms" : "Is not contained by any terms",
+  "Is not inherited by any terms" : "Is not inherited by any terms",
+  "Add assets" : "Add assets",
+  "Add assets to Data Product" : "Add assets to Data Product",
+  "Add assets to Domain" : "Add assets to Domain"
 }
