--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,14 +1,65 @@
 {
   "Welcome back": "欢迎回来",
+  "Search Tables, Dashboards, People, & more..." : "查数据库表，看板，用户...",
+  "View all" : "查看所有",
+  "Create new View" : "创新新视图",
+  "Search Views..." : "查找视图...",
+  "Preview View": "预览视图",
+  "Edit View" : "编辑视图",
+  "Manage Views" : "管理视图",
+  "Please enter a name for your View.": "请输入视图名称",
+  "Name" : "名称",
+  "Data Analyst view" : "数据分析视图",
+  "This View is useful for Data Analysts" : "用作数据分析的查询视图",
+  "Description" : "描述信息",
+  "Give your new View a name." : "命名你的查询视图",
+  "Entities" : "视图列表",
+
+  "Add tags" : "添加标签",
+  "Add Tags" : "添加标签",
+  "Remove tags" : "删除标签",
+  "Data Products" : "数据产品",
+  "More you may be interested in" : "更多你可能关注的",
+
+  "Unset Data Product" : "移除数据产品",
+  "Set Data Product" : "添加到数据产品",
+  "Add Link" : "添加链接",
+  "Add Documentation" : "添加文档说明",
+  "Type" : "类型",
+  "Select the type of your new View." : "选择你视图的类型",
+  "Filters" : "过滤器",
+  "Select the filters that are applied when this View is selected. Assets that match these filters will be shown when the View is applied." : "选择在选择此视图时应用的筛选器。当打开此视图时将显示与这些过滤器匹配的资产",
+  "Add Filter" : "添加过滤器",
+
+  "Owner": "责任人",
+  "Tag": "标签",
+  "Platform": "平台",
+  "Column Tag": "字段标签",
+  "Glossary Term": "术语",
+  "Column Glossary Term": "字段术语",
+  "Column Name": "字段名称",
+  "Column Description": "字段描述信息",
+  "Soft Deleted": "是否软删除",
+  "Entity Type": "实体类型",
+  "Container": "容器",
+  "Sub Type": "子类型",
+  "Environment": "环境",
+  "Degree": "职位",
+  "Browse": "浏览器",
+
+  "Write a description for your View." : "为你的视图添加描述信息",
   "Analytics": "分析",
   "View DataHub usage analytics": "查看 DataHub 使用情况分析",
   "Ingestion": "元数据集成",
   "Connect DataHub to your organization's data sources": "将DataHub连接到组织的数据源",
   "Govern": "治理",
-  "Glossary": "词汇表",
+  "Glossary": "术语",
+  "Empty Glossary" : "无术语",
+  "Create Terms and Term Groups to organize data assets using a shared vocabulary." : "创建术语和术语组，使用通用的词汇表组织数据资产",
   "View and modify your data dictionary": "查看和修改您的数据字典",
   "Domains": "主题域",
   "Domain": "主题域",
+  "domain" : "主题域",
   "Manage related groups of data assets": "管理数据资产分组",
   "Manage your DataHub settings": "datahub设置",
   "New Domain" : "新主题域",
@@ -16,22 +67,119 @@
   "Try searching for" : "尝试搜索",
   "Platforms" : "平台",
   "Top Tags" : "顶层标签",
+  "Tags" : "标签列表",
+  "Glossary Terms": "术语",
+  "Data Product" : "数据产品",
   "Explore your data" : "探索你的数据",
   "View All Domains" : "查看所有主题域",
   "Business Glossary" : "业务术语",
-  "Add Term Group" : "增加词汇",
-  "Add Term" : "增加词汇组",
+  "Term Groups" : "术语组",
+  "Tasks" : "任务",
+  "Add Term Group" : "增加词汇组",
+  "Add Term" : "增加词汇",
+  "Add Terms" : "增加词汇",
   "Add Glossary Term to assets" : "添加术语词汇到资产",
   "Add to assets" : "添加到资产",
   "Add Owners" : "添加责任人",
   "Owners" : "责任人",
   "No domain set" : "没有设置主题域",
+  "Group related entities based on your organizational structure using by adding them to a Domain.": "通过添加到主题域将相关联的实体根据根据您的组织架构进行分组。",
   "About": "关于",
   "No documentation yet" : "未添加说明文档",
   "Share your knowledge by adding documentation and links to helpful resources.": "通过添加文档和指向有用资源的链接来分享您的知识。",
-  "Group related entities based on your organizational structure using by adding them to a Domain.": "通过添加到主题域将相关联的实体根据根据您的组织架构进行分组。",
+  "No owners" : "未设置责任人",
+  "Adding owners helps you keep track of who is responsible for this data." : "添加责任人有助于追溯数据负责人。",
+
+  "No tags added yet" : "未设置标签",
+  "Tag entities to help make them more discoverable and call out their most important attributes.": "标签能够反映出资产最重要的属性，让资产检索更准确高效。",
+  "No terms added yet" : "未添加术语",
+  "Apply glossary terms to entities to classify their data." : "为实体添加术语以对其分类",
+  "No queries yet" : "无查询",
   "Mark as deprecated" : "标记为弃用",
+  "No data product set" : "没有设置数据产品",
+  "Group related entities based on shared characteristics by adding them to a Data Product." : "通过加入到数据产品实现基于公共特征划分实体。",
+  "Lineage" : "血缘",
+  "Details" : "查看明细",
   "Mark as un-deprecated" : "标记为非弃用",
   "Confirm Mark as un-deprecated" : "确认标记为非弃用",
-  "Are you sure you want to mark these assets as un-deprecated?" : "确认要将这些资产标记为非弃用么？"
+  "Are you sure you want to mark these assets as un-deprecated?" : "确认要将这些资产标记为非弃用么？",
+  "Most Popular": "访问次数最多",
+  "Downstream" : "下游",
+  "downstream" : "下游",
+  "upstream" : "上游",
+  "Filter lineage edges by observed date" : "根据观察时间过滤依赖",
+  "Column Lineage" : "字段级别血缘",
+  "Hide column level lineage" : "隐藏字段级别血缘",
+  "Show column level lineage" : "展示字段级别血缘",
+  "Click to refresh data" : "刷新数据",
+  "Refresh" : "刷新",
+  "Visualize Lineage" : "查看血缘图",
+  "Edit" : "编辑",
+  "Edit Downstream": "编辑下游",
+  "Edit Upstream" : "编辑上游",
+  "Documentation" : "文档说明",
+  "Schema" : "结构",
+  "View Definition" : "查看定义",
+  "Preview" : "预览",
+  "Lineage" : "血缘",
+  "Properties" : "配置",
+  "Queries" : "查询列表",
+  "Stats" : "统计",
+  "Validation" : "验证",
+  "Operations" : "操作列表",
+  "Access Management" : "权限管理",
+
+  "Related Entities" : "相关实体",
+  "Related Terms" : "相关词汇",
+  "Inherits": "继承",
+  "Contains" : "包含",
+  "Contained by" : "被包含",
+  "Inherited by" : "被继承",
+  "Contains no Terms" : "不包含任何词汇",
+  "Terms can contain other terms to represent a \"Has A\" style relationship." : "术语可以包含其他术语来表示“Has a”样式关系",
+  "Does not inherit from any terms" : "没有继承自任何其他词汇",
+  "Is not contained by any terms" : "没有被其他词汇包含",
+  "Is not inherited by any terms" : "没有被其他词汇继承",
+  "Assets" : "资产",
+  "Add assets" : "添加资产",
+  "Add assets to Data Product" : "添加资产到数据产品",
+  "Add assets to Domain" : "添加资产到主题域",
+
+  "Create new Data Product" : "新建数据产品",
+  "New Data Product" : "新建数据产品",
+  "Created Data Product!" : "数据产品已创建!",
+  "Cancel" : "取消",
+  "Create" : "创建",
+
+  "DOMAIN" : "主题域",
+  "Datasets" : "数据集",
+  "Dataset" : "数据集",
+  "Charts" : "仪表盘",
+  "Pipelines" : "消息队列",
+  "Dashboards" : "看板",
+  "ML Models" : "ML模型",
+  "Feature Tables" : "ML特征表",
+  "Features" : "Features",
+  "Database" : "数据库",
+  "People" : "用户",
+  "Groups" : "用户组",
+  "Manage Ingestion" : "管理元数据集成",
+  "Create, schedule, and run DataHub ingestion sources." : "创建、调度、运行元数据集成。",
+  "Create new source" : "创建新的数据源",
+  "Refresh" : "刷新",
+  "Sources" : "数据源",
+  "Search sources..." : "搜索数据源...",
+  "Secrets" : "密钥",
+  "Create new secret": "添加密钥",
+  "Search secrets...": "搜索密钥...",
+  "Search domains..." : "搜索主题域...",
+  "Search Domains" : "搜索主题域",
+  "Save as View" : "保存为查询视图",
+  "Save as a View" : "保存为查询视图",
+  "Save these filters as a new View." : "将本次过滤条件保存为新视图",
+  "Views allow you to easily save or share search filters." : "视图可以简化保存和分享过滤器",
+  "Advanced Filters" : "高级筛选",
+  "Basic Filters" : "筛选",
+  "Owned By" : "责任人"
+
 }
